--- a/index.html
+++ b/index.html
@@ -5,26 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Henny+Penny&display=swap" rel="stylesheet">
-    <title>Desafio 1 - Grid Layout </title>
+    <title>animes.online </title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="medias/style.css">
 </head>
 <body>
     <div class="container">
         <header class="caixa" id="topo">
             <i class="fa-solid fa-web-awesome" id="logo">Animes.onlines</i>
-            <a href="">Login</a>
         </header>
         <nav class="caixa" id="menu">
-            <a href="">Inicio</a>
-            <a href="">Genero</a>
-            <a href=""></a>
-            <a href=""></a>
+            <div class="menu">
+                <a href="" class="link">Inicio</a>
+                <a href="" class="link">Genero</a>
+                <a href="" class="link">Contato</a>
+                <a href="" class="link">Login</a>
+            </div>
         </nav>
         <main class="caixa" id="principal">
-            Principal
+            <h1>lançamentos do dia</h1>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
         </main>
         <aside class="caixa" id="secundario">
-            Secundario
+            <h1>os mais assistidos</h1>
+            <div class="secund">a</div>
+            <div class="secund">a</div>
+            <div class="secund">a</div>
+            <div class="secund">a</div>
+            <div class="secund">a</div>
+            <div class="secund">a</div>
+            <div class="secund">a</div>
+            <div class="secund">a</div>
+            <div class="secund">a</div>
+            <div class="secund">a</div>
+
         </aside>
         <footer class="caixa" id="rodape">
             Rodape
