--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
 <body>
     <div class="container">
         <header class="caixa" id="topo">
-            <i class="fa-solid fa-web-awesome" id="logo">Animes.onlines</i>
+            <i class="fa-solid fa-web-awesome" id="logo"></i>
+            <p>Animes.onlines</p>
         </header>
         <nav class="caixa" id="menu">
             <div class="menu">
                 <a href="" class="link">Inicio</a>
                 <a href="" class="link">Genero</a>
                 <a href="" class="link">Contato</a>
-                <a href="" class="link">Login</a>
+                <a href="tela-de-login/login.html" class="link">Login</a>
             </div>
         </nav>
         <main class="caixa" id="principal">
             <h1>lançamentos do dia</h1>
+            <div id="listagem"> 
             <div class="list">a</div>
             <div class="list">a</div>
             <div class="list">a</div>
@@ -39,6 +41,18 @@
             <div class="list">a</div>
             <div class="list">a</div>
             <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+            <div class="list">a</div>
+
+            </div>
         </main>
         <aside class="caixa" id="secundario">
             <h1>os mais assistidos</h1>
@@ -52,10 +66,12 @@
             <div class="secund">a</div>
             <div class="secund">a</div>
             <div class="secund">a</div>
-
+            <div class="secund">a</div>
         </aside>
         <footer class="caixa" id="rodape">
-            Rodape
+            &COPY;SITE CRIADO POR VINICIUS PACHECO.
+            <h2>Todos os direitos reservados.</h2>
+            <p>Este site é apenas para fins educacionais e não hospeda nenhum conteúdo.</p>
         </footer>
 
     </div>
