--- a/index.html
+++ b/index.html
@@ -18,9 +18,21 @@
         <nav class="caixa" id="menu">
             <div class="menu">
                 <a href="" class="link">Inicio</a>
-                <a href="" class="link">Genero</a>
+                    <select class="link" id="genero" size="1">
+                        <option value="" selected disabled>Genero</option>
+                        <option value="Ação">Ação</option>
+                        <option value="Aventura">Aventura</option>
+                        <option value="Comédia">Comédia</option>
+                        <option value="Drama">Drama</option>
+                        <option value="Fantasia">Fantasia</option>
+                        <option value="Horror">Horror</option>
+                        <option value="Romance">Romance</option>
+                        <option value="Sci-Fi">Sci-Fi</option>
+                        <option value="Sobrenatural">Sobrenatural</option>
+                        </select> 
+                    </a>
                 <a href="" class="link">Contato</a>
-                <a href="tela-de-login/login.html" class="link">Login</a>
+                <a href="tela-de-login/index.html" class="link">Login</a>
             </div>
         </nav>
         <main class="caixa" id="principal">
