--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
         <header class="caixa" id="topo">
             <i class="fa-solid fa-web-awesome" id="logo"></i>
             <p>Animes.onlines</p>
+                <div class="menu">
+                    <a href="tela-de-login/index.html" class="link">Login
+
+                    </a></div>
         </header>
         <nav class="caixa" id="menu">
             <div class="menu">
                 <a href="" class="link">Inicio</a>
-                    <select class="link" id="genero" size="1">
+                 <select class="link" id="genero" size="1">
                         <option value="" selected disabled>Genero</option>
                         <option value="Ação">Ação</option>
                         <option value="Aventura">Aventura</option>
@@ -31,13 +35,11 @@
                         <option value="Sobrenatural">Sobrenatural</option>
                         </select> 
                     </a>
-                <a href="" class="link">Contato</a>
-                <a href="tela-de-login/index.html" class="link">Login</a>
             </div>
         </nav>
         <main class="caixa" id="principal">
             <h1>lançamentos do dia</h1>
-            <div id="listagem"> 
+            <div id="listagem">
             <div class="list">a</div>
             <div class="list">a</div>
             <div class="list">a</div>
@@ -56,29 +58,83 @@
             <div class="list">a</div>
             <div class="list">a</div>
             <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
+            </div>
+            <div class="poster">
+                <div class="posters">
+
+                </div>
+                <div class="posters">
+
+                </div>
+                <div class="posters">
+
+                </div>
+                <div class="posters">
+
+                </div>
+                <div class="posters">
+
+                </div>
 
             </div>
         </main>
         <aside class="caixa" id="secundario">
             <h1>os mais assistidos</h1>
-            <div class="secund">a</div>
-            <div class="secund">a</div>
-            <div class="secund">a</div>
-            <div class="secund">a</div>
-            <div class="secund">a</div>
-            <div class="secund">a</div>
-            <div class="secund">a</div>
-            <div class="secund">a</div>
-            <div class="secund">a</div>
-            <div class="secund">a</div>
-            <div class="secund">a</div>
+            <div class="secund">
+                <a href="">
+                    <img src="imagens/FEzQxqZXwAMnGia.jpg" alt="">
+                </a>
+            </div>
+            <div class="secund">
+                <a href="">
+                    <img src="imagens/download.jpg" alt="">
+                </a>
+            </div>
+            <div class="secund">
+                <a href="">
+                    <img src="imagens/images (1).jpg" alt="">
+                </a>
+            </div>
+            <div class="secund">
+                <a href="">
+                    <img src="imagens/download (1).jpg" alt="">
+                </a>
+            </div>
+            <div class="secund">
+                <a href="">
+                    <img src="imagens/bleach-color-page_8vuh.jpg" alt="">
+                </a>
+            </div>
+            <div class="secund">
+                <a href="">
+                    <img src="imagens/download (2).jpg" alt="">
+                </a>
+            </div>
+            <div class="secund">
+                <a href="">
+                    <img src="imagens/download (3).jpg" alt="">
+                </a>
+            </div>
+            <div class="secund">
+                <a href="">
+                    <img src="imagens/download (4).jpg" alt="">
+                </a>
+            </div>
+            <div class="secund">
+                <a href="">
+                    <img src="imagens/download (5).jpg" alt="">
+                </a>
+            </div>
+            <div class="secund">
+                <a href="">
+                    <img src="imagens/kaiju-no-8.webp" alt="">
+                </a>
+            </div>
+            <div class="secund">
+                <a href="">
+                    <img src="imagens/Dandadan-Segunda-Temporada-Okarun-Momo-Ayase-Vovo-Turbo-CAPA.webp" alt="">
+                </a>
+            </div>
         </aside>
         <footer class="caixa" id="rodape">
             &COPY;SITE CRIADO POR VINICIUS PACHECO.
