acba pelamor de deus

--- a/index.html
+++ b/index.html
@@ -15,14 +15,8 @@
             <i class="fa-solid fa-web-awesome" id="logo"></i>
             <p>Animes.onlines</p>
                 <div class="menu">
-                    <a href="tela-de-login/index.html" class="link">Login
-
-                    </a></div>
-        </header>
-        <nav class="caixa" id="menu">
-            <div class="menu">
-                <a href="" class="link">Inicio</a>
-                 <select class="link" id="genero" size="1">
+                    <a href="" class="link">Inicio</a>
+                     <select class="link" id="genero" size="1">
                         <option value="" selected disabled>Genero</option>
                         <option value="Ação">Ação</option>
                         <option value="Aventura">Aventura</option>
@@ -33,49 +27,119 @@
                         <option value="Romance">Romance</option>
                         <option value="Sci-Fi">Sci-Fi</option>
                         <option value="Sobrenatural">Sobrenatural</option>
-                        </select> 
+                       </select> 
                     </a>
-            </div>
-        </nav>
+                    <a href="tela-de-login/index.html" class="link">Login
+
+                    </a>
+                </div>
+        </header>
+    
         <main class="caixa" id="principal">
-            <h1>lançamentos do dia</h1>
-            <div id="listagem">
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
-            <div class="list">a</div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
             </div>
-            <div class="poster">
-                <div class="posters">
-
-                </div>
-                <div class="posters">
-
-                </div>
-                <div class="posters">
-
-                </div>
-                <div class="posters">
-
-                </div>
-                <div class="posters">
-
-                </div>
-
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
+            </div>
+            <div class="list">
+                <a href="https://animesdrive.blog/episodio/kanojo-okarishimasu-4th-season-episodio-01"> 
+                    <img src="imagens/download (7).jpg" alt="">
+                </a>
             </div>
         </main>
         <aside class="caixa" id="secundario">
