--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
             <div class="list">
                 <a href="anime-details.html?id=2"> 
                     <img src="imagens/FEzQxqZXwAMnGia.jpg" alt="Jujutsu Kaisen">
-                    <span class="anime-title">Jujutsu Kaisen</span>
+                    <span class="anime-title">One Piece</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=3"> 
                     <img src="imagens/download.jpg" alt="Demon Slayer">
-                    <span class="anime-title">Demon Slayer</span>
+                    <span class="anime-title">Naruto</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=4"> 
                     <img src="imagens/images (1).jpg" alt="One Piece">
-                    <span class="anime-title">One Piece</span>
+                    <span class="anime-title">Jujutsu Kaisen</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=5"> 
                     <img src="imagens/download (1).jpg" alt="Attack on Titan">
-                    <span class="anime-title">Attack on Titan</span>
+                    <span class="anime-title">Solo Leveling</span>
                 </a>
             </div>
             <div class="list">
@@ -75,25 +75,25 @@
             <div class="list">
                 <a href="anime-details.html?id=7"> 
                     <img src="imagens/download (2).jpg" alt="My Hero Academia">
-                    <span class="anime-title">My Hero Academia</span>
+                    <span class="anime-title">Attack On Titan</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=8"> 
                     <img src="imagens/download (3).jpg" alt="Tokyo Revengers">
-                    <span class="anime-title">Tokyo Revengers</span>
+                    <span class="anime-title">Demon Slayer</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=9"> 
                     <img src="imagens/download (4).jpg" alt="Chainsaw Man">
-                    <span class="anime-title">Chainsaw Man</span>
+                    <span class="anime-title">Oshi No Ko</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=10"> 
                     <img src="imagens/download (5).jpg" alt="Spy x Family">
-                    <span class="anime-title">Spy x Family</span>
+                    <span class="anime-title">Frieren</span>
                 </a>
             </div>
             <div class="list">
@@ -115,25 +115,25 @@
             <div class="secund">
                 <a href="anime-details.html?id=2">
                     <img src="imagens/FEzQxqZXwAMnGia.jpg" alt="Jujutsu Kaisen">
-                    <span class="anime-title">Jujutsu Kaisen</span>
+                    <span class="anime-title">One Piece</span>
                 </a>
             </div>
             <div class="secund">
                 <a href="anime-details.html?id=3">
                     <img src="imagens/download.jpg" alt="Demon Slayer">
-                    <span class="anime-title">Demon Slayer</span>
+                    <span class="anime-title">Naruto</span>
                 </a>
             </div>
             <div class="secund">
                 <a href="anime-details.html?id=4">
                     <img src="imagens/images (1).jpg" alt="One Piece">
-                    <span class="anime-title">One Piece</span>
+                    <span class="anime-title">Jujutsu Kaisen</span>
                 </a>
             </div>
             <div class="secund">
                 <a href="anime-details.html?id=5">
                     <img src="imagens/download (1).jpg" alt="Attack on Titan">
-                    <span class="anime-title">Attack on Titan</span>
+                    <span class="anime-title">Solo LeveLing</span>
                 </a>
             </div>
             <div class="secund">
