--- a/anime-details.html
+++ b/anime-details.html
@@ -8,8 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Henny+Penny&display=swap" rel="stylesheet">
     <title>Detalhes do Anime - Animes.online</title>
     <link rel="stylesheet" href="estilo/style.css">
-    <link rel="stylesheet" href="medias/style.css">
+    <link rel="stylesheet" href="estilo/medias.css">
     <link rel="stylesheet" href="estilo/anime-details.css">
+    <link rel="stylesheet" href="estilo/episodios.css">
 </head>
 <body>
     <div class="container details-container">
@@ -84,7 +85,10 @@
                         <!-- Episódios serão adicionados via JavaScript -->
                     </div>
                 </div>
-                
+                <div id="episodios-anime">
+                    <h3>Episódios</h3>
+                    <ul id="lista-episodios"></ul>
+                </div>  
                 <div id="characters" class="tab-pane">
                     <div class="characters-grid" id="characters-grid">
                         <!-- Personagens serão adicionados via JavaScript -->
