--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header class="caixa" id="topo">
-            <i class="fa-solid fa-dragon" id="logo">Animes.online</i>
+            <i class="fa-solid fa-dragon" id="logo">Animes.Dragon</i>
             <nav class="menu">
                 <a href="index.html" class="link">Início</a>
                 <a href="animes.html" class="link">Animes</a>
