--- a/perfil.html
+++ b/perfil.html
@@ -47,7 +47,7 @@
             </div>
 
             <input type="text" id="novoAnime" placeholder="Adicionar anime favorito" />
-            <button class="btn" onclick="adicionarAnime()">Adicionar Anime</button>
+            <button class="btn" onclick="adicionarAnime()" id="add-anime">Adicionar Anime</button>
             </div>
 
             <div class="actions">
