--- a/perfil.html
+++ b/perfil.html
@@ -52,13 +52,8 @@
 
             <div class="actions">
             <button class="btn" onclick="salvarPerfil()">Salvar Perfil</button>
-            <button class="btn btn-sair" onclick="limparPerfil()">Sair / Limpar</button>
+            <button class="btn btn-sair" onclick="limparPerfil()">Sair</button>
             </div>
-
-             <section class="anime-populares">
-                <h2>Animes Populares</h2>
-                <div id="lista-animes" class="anime-cards"></div>
-            </section>
     </main>
 
         
