--- a/tela-de-login/index.html
+++ b/tela-de-login/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Faça login para acessar sua conta no Animes.online">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="imagen/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media-query.css">
     <title>Login - Animes.online</title>
@@ -53,7 +54,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2023 Animes.online - Todos os direitos reservados</p>
+        <p>&copy; 2025 Animes.online - Todos os direitos reservados</p>
     </footer>
     
     <script src="script.js"></script>    
