atualização de imagesn mais leves para o site carregar mais fácil

--- a/anime-details.html
+++ b/anime-details.html
@@ -6,20 +6,21 @@
     <meta name="description" content="Detalhes do anime - Animes.online">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Henny+Penny&display=swap" rel="stylesheet">
-    <title>Detalhes do Anime - Animes.Dragon</title>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <title>Animes.Dragons</title>
     <link rel="stylesheet" href="estilo/style.css">
-    <link rel="stylesheet" href="medias/style.css">
+    <link rel="stylesheet" href="estilo/medias.css">
     <link rel="stylesheet" href="estilo/anime-details.css">
 </head>
 <body>
     <div class="details-container">
         <header class="caixa" id="topo">
-            <i class="fa-solid fa-dragon" id="logo">Animes.online</i>
+            <i class="fa-solid fa-dragon" id="logo">Animes.Dragons</i>
             <nav class="menu">
                 <a href="index.html" class="link">Início</a>
                 <a href="animes.html" class="link">Animes</a>
                 <a href="mangas.html" class="link">Mangás</a>
-                <a href="tela-de-login/index.html" class="link">Login</a>
+                <a href="perfil.html" class="link">Perfil</a>
             </nav>
             <div class="search-container">
                 <input type="text" id="search-input" placeholder="Buscar anime...">
@@ -83,7 +84,7 @@
                         <!-- Episódios serão adicionados via JavaScript -->
                     </div>
                 </div>
-                
+                 
                 <div id="characters" class="tab-pane">
                     <div class="characters-grid" id="characters-grid">
                         <!-- Personagens serão adicionados via JavaScript -->
