--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Site de animes online com os melhores títulos e lançamentos">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Henny+Penny&display=swap" rel="stylesheet">
-    <title>Animes.online - Seu portal de animes</title>
+    <title>Animes.Dragons - Seu portal de animes</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/medias.css">
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header class="caixa" id="topo">
-            <i class="fa-solid fa-dragon" id="logo">Animes.Dragon</i>
+            <i class="fa-solid fa-dragon" id="logo">Animes.Dragons</i>
             <nav class="menu">
                 <a href="index.html" class="link">Início</a>
                 <a href="animes.html" class="link">Animes</a>
@@ -40,73 +40,73 @@
             <h2 class="section-title">Animes em Destaque</h2>
             <div class="list">
                 <a href="anime-details.html?id=1"> 
-                    <img src="imagens/download (7).jpg" alt="Kanojo Okarishimasu">
+                    <img src="imagens/Kanojo-Okarishimasu.jpg" alt="Kanojo Okarishimasu">
                     <span class="anime-title">Kanojo Okarishimasu</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=2"> 
-                    <img src="imagens/FEzQxqZXwAMnGia.jpg" alt="One Piece">
+                    <img src="imagens/One-Piece.jpg" alt="One Piece">
                     <span class="anime-title">One Piece</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=3"> 
-                    <img src="imagens/download.jpg" alt="Naruto">
-                    <span class="anime-title">Naruto</span>
+                    <img src="imagens/Naruto-Shippuden.jpg" alt="Naruto">
+                    <span class="anime-title">Naruto Shippuden</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=4"> 
-                    <img src="imagens/images (1).jpg" alt="Jujutsu Kaisen">
+                    <img src="imagens/Jujutsu-Kaisen.jpg" alt="Jujutsu Kaisen">
                     <span class="anime-title">Jujutsu Kaisen</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=5"> 
-                    <img src="imagens/download (1).jpg" alt="Solo Leveling">
+                    <img src="imagens/Solo-Leveling.jpg" alt="Solo Leveling">
                     <span class="anime-title">Solo Leveling</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=6"> 
-                    <img src="imagens/bleach-color-page_8vuh.jpg" alt="Bleach">
+                    <img src="imagens/bleach.jpg" alt="Bleach">
                     <span class="anime-title">Bleach</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=7"> 
-                    <img src="imagens/download (2).jpg" alt="Attack On Titan">
+                    <img src="imagens/Attack-on-Titan.jpg" alt="Attack On Titan">
                     <span class="anime-title">Attack On Titan</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=8"> 
-                    <img src="imagens/download (3).jpg" alt="Demon Slayer">
+                    <img src="imagens/Demon-Slayer.jpg" alt="Demon Slayer">
                     <span class="anime-title">Demon Slayer</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=9"> 
-                    <img src="imagens/download (4).jpg" alt="Oshi No Ko">
+                    <img src="imagens/Oshi-no-Ko.png" alt="Oshi No Ko">
                     <span class="anime-title">Oshi No Ko</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=10"> 
-                    <img src="imagens/download (5).jpg" alt="Frieren">
-                    <span class="anime-title">Frieren</span>
+                    <img src="imagens/sousou-no-frieren.jpg" alt="Frieren">
+                    <span class="anime-title">sousou no Frieren</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=11"> 
-                    <img src="imagens/kaiju-no-8.webp" alt="Kaiju No. 8">
+                    <img src="imagens/kaiju-no-8.jpg" alt="Kaiju No. 8">
                     <span class="anime-title">Kaiju No. 8</span>
                 </a>
             </div>
             <div class="list">
                 <a href="anime-details.html?id=12"> 
-                    <img src="imagens/Dandadan-Segunda-Temporada-Okarun-Momo-Ayase-Vovo-Turbo-CAPA.webp" alt="Dandadan">
+                    <img src="imagens/Dandadan.jpg" alt="Dandadan">
                     <span class="anime-title">Dandadan</span>
                 </a>
             </div>
@@ -116,31 +116,31 @@
             <h2>Os Mais Assistidos</h2>
             <div class="secund">
                 <a href="anime-details.html?id=2">
-                    <img src="imagens/FEzQxqZXwAMnGia.jpg" alt="One Piece">
+                    <img src="imagens/One-Piece.jpg" alt="One Piece">
                     <span class="anime-title">One Piece</span>
                 </a>
             </div>
             <div class="secund">
                 <a href="anime-details.html?id=3">
-                    <img src="imagens/download.jpg" alt="Naruto">
-                    <span class="anime-title">Naruto</span>
+                    <img src="imagens/Naruto-Shippuden.jpg" alt="Naruto">
+                    <span class="anime-title">Naruto Shippuden</span>
                 </a>
             </div>
             <div class="secund">
                 <a href="anime-details.html?id=4">
-                    <img src="imagens/images (1).jpg" alt="Jujutsu Kaisen">
+                    <img src="imagens/Jujutsu-Kaisen.jpg" alt="Jujutsu Kaisen">
                     <span class="anime-title">Jujutsu Kaisen</span>
                 </a>
             </div>
             <div class="secund">
                 <a href="anime-details.html?id=5">
-                    <img src="imagens/download (1).jpg" alt="Solo Leveling">
+                    <img src="imagens/Solo-Leveling.jpg" alt="Solo Leveling">
                     <span class="anime-title">Solo Leveling</span>
                 </a>
             </div>
             <div class="secund">
                 <a href="anime-details.html?id=6">
-                    <img src="imagens/bleach-color-page_8vuh.jpg" alt="Bleach">
+                    <img src="imagens/bleach.jpg" alt="Bleach">
                     <span class="anime-title">Bleach</span>
                 </a>
             </div>
