--- a/perfil.html
+++ b/perfil.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <header class="caixa" id="topo">
-            <i class="fa-solid fa-dragon" id="logo">Animes.online</i>
+            <i class="fa-solid fa-dragon" id="logo">Animes.Dragons</i>
             <nav class="menu">
                 <a href="index.html" class="link">Início</a>
                 <a href="animes.html" class="link">Animes</a>
